# vehicle-mcp

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  release.sh
.github/workflows/: ci.yml  release.yml
src/vehicle_mcp/: __init__.py  __main__.py  server.py
src/vehicle_mcp/adapters/: __init__.py  base.py  skoda.py  vehicle_capability.py
